# getllm

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.test  Gemfile  Makefile  README.md  TEST.md  __init__.py  bugfix.txt  build.py  build_and_publish.py  build_fix.py  debug_card.html  debug_ollama.com_library.html  debug_ollama_page.html  docker-compose.test.yml  env.example  exceptions.py  getllm-cli  getllm_cli.py  huggingface_model_monitor.py  install_getllm.sh  ollama_model_monitor.py  ollama_models.json  page_1_source.html  page_2_source.html  publish_to_pypi.sh  pyproject.toml  requirements-dev.txt  run_api_debug.py  run_docker_tests.sh  setup.py  slides.html  test_all_commands.sh  test_api.py  test_commands.sh  (+9 more)
.poetry/: config.toml
cli/: main.py
getllm/: OllamaModelsScraper.py  __init__.py  cli.py  debug_ollama.com_library.html  hf_models.json  interactive_cli.py  models.py  ollama_integration.py  ollama_models.json
models/: __init__.py  huggingface.py  manager.py
ollama/: __init__.py
ollama_models_data/: ollama_models_20250529_135612.json  ollama_models_20250529_135812.json  ollama_models_20250529_135826.json  ollama_models_20250529_135917.json  ollama_models_20250529_140412.json  ollama_models_20250529_140512.json  ollama_models_20250529_161712.json  ollama_models_20250529_161812.json  ollama_models_20250529_162312.json  ollama_models_20250529_162413.json  ollama_models_20250529_162612.json  ollama_models_20250529_162712.json
pyllm/: __init__.py  app.py  cli.py  interactive_cli.py  models.py  (+1 more)
(+32 files in other folders)
