[tool.poetry]
name = "pyllm"
version = "0.1.0"
description = "Python LLM operations service for the DevLama ecosystem"
authors = ["Tom Sapletta <info@softreck.dev>"]
license = "Apache-2.0"
packages = [{include = "pyllm"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
